resolve problem bug in collapse items

--- a/src/components/modules/item-list/item-list.scss
+++ b/src/components/modules/item-list/item-list.scss
@@ -52,6 +52,7 @@ item-list {
 
         p {
             font-family: 'Oswald', sans-serif;
+            font-size: 14px;
         }
     }
 }
